--- a/html/index.html
+++ b/html/index.html
@@ -11,9 +11,16 @@
 	<link rel="stylesheet" href="css/estiloinicio.css"> 
 	<link rel="stylesheet" href="css/normalize.css">
 	<script type="text/javascript" src="js/modernizr-custom.js"></script>
-	
-
 </head>
+
+<header>
+	 <h1> DISEÑO DE SITIOS WEB - UNAD </h1>
+
+<figure> 
+	<img src="img/unadista.png"alt="unadista">
+    </figure>
+
+       </header>
 
 <body>
 	<ul>
@@ -29,9 +36,17 @@
          </li>
 
 	</ul>
+<header> 
 
-<section>
-<h2> DISEÑO DE SITIOS WEB - UNAD </h2>
+JJJJJJJJJJJJJJ
+
+</header>
+
+<nav>
+	ACA VOY OJO
+</nav>
+
+
  <div id="apDiv20">
  	<section id ="primero"> INTRODUCCION AL DISEÑO WEB
  	
@@ -56,8 +71,7 @@
                 <br> 
                    - Holaaaaaaaa mundooooooo <br>
 
-
-
+     
 <FOOTER>
 	<div id="apDiv25">TRABAJO UNIDAD 2</div>
 	<div id="apDiv26">Elaborado por Claudia Sanchez y Juan Cifuentes 2019 </div>
