--- a/html/index.html
+++ b/html/index.html
@@ -3,7 +3,7 @@
 <html lang="es"class"no-js">
 
 <head>
-	<title>DISEÑO WEB </title>
+	
 	<meta charset="UTF-8">
 	<meta conten="juan cifuentes claudia sanchez"name="author">
 	<meta conten="pagina educativa actividad 3 ovi"name="description">
@@ -11,15 +11,14 @@
 	<link rel="stylesheet" href="css/estiloinicio.css"> 
 	<link rel="stylesheet" href="css/normalize.css">
 	<script type="text/javascript" src="js/modernizr-custom.js"></script>
-</head>
+    </head>
 
 <header>
-	 <h1> DISEÑO DE SITIOS WEB - UNAD </h1>
+	 <h1> DISEÑO DE SITIOS WEB  UNAD </h1>
 
 <figure> 
 	<img src="img/unadista.png"alt="unadista">
     </figure>
-
        </header>
 
 <body>
