actividad 3 pagina web
Diseño de sitios web actividad 3

--- a/html/Mockup.html
+++ b/html/Mockup.html
@@ -7,7 +7,7 @@
 	<meta description="OVI,DISEÑO WEB"/>
     <link rel="stylesheet" href="css/estilomokup.css"> 
 	 <link rel="stylesheet" href="css/normalize.css">
-	<title>DISEÑO DE SITIOS WEB  UNAD</title>
+   	<title>DISEÑO DE SITIOS WEB  UNAD</title>
 
      </head>
 
@@ -23,9 +23,8 @@
 
  	<section id="CONTENEDOR">
     <section id="PRINCIPAL">
-
  		 &lt;SECTION&gt;
-         <article> 
+   <article> 
           &lt;ARTICLE&gt;
       </article> 
        <aside>
@@ -39,4 +38,4 @@
 
     </body
 
- <html
+ </html>
